--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a name="toho-like-js" class="anchor" href="#toho-like-js"><span class="octicon octicon-link"></span></a>toho-like-js</h1>
+<a name="toho-like-js" class="anchor" href="#toho-like-js"><span class="octicon octicon-link"></span></a><a href="./toho-like-js/index.html">toho-like-js</a></h1>
       </section>
     </div>
 
