adopted WebGL Layer.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="source/Game.js"></script>
 <script type="text/javascript" src="source/MoveVector.js"></script>
 <script type="text/javascript" src="source/Element.js"></script>
+<script type="text/javascript" src="source/Background.js"></script>
 <script type="text/javascript" src="source/Fighter.js"></script>
 <script type="text/javascript" src="source/FighterOption.js"></script>
 <script type="text/javascript" src="source/Enemy.js"></script>
