Added GameSocket. It's an experimental.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="data/bosses_params.js"></script>
 <script type="text/javascript" src="data/talk_params.js"></script>
 <script type="text/javascript" src="data/stage_params.js"></script>
+<script type="text/javascript" src="source/GameSocket.js"></script>
 <script type="text/javascript" src="source/Game.js"></script>
 <script type="text/javascript" src="source/MoveVector.js"></script>
 <script type="text/javascript" src="source/Element.js"></script>
