--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ How to play
 <ul>
 <li>Cursor key: move / character select</li>
 <li>Z:          shot / ok</li>
-<li>X:          bomb / chancel</li>
+<li>X:          bomb / cancel</li>
 <li>Shift:      slow</li>
 <li>Space:      character change(for debug)</li>
 </ul>
@@ -82,7 +82,7 @@ See &quot;chrome://gpu&quot; and &quot;chrome://flags&quot; on your chrome to ch
 </p>
 
 <p>
-Thanks
+Thanks for all the images and musics.
 </p>
 <ul>
 <li>SE, etc  <a href="http://www.danmakufu.net/?%E5%88%B6%E4%BD%9C%2F%E3%83%AA%E3%83%B3%E3%82%AF">http://www.danmakufu.net/?%E5%88%B6%E4%BD%9C%2F%E3%83%AA%E3%83%B3%E3%82%AF</a></li>
