--- a/webrtc_test.html
+++ b/webrtc_test.html
@@ -1388,7 +1388,7 @@ See &quot;chrome://gpu&quot; and &quot;chrome://flags&quot; on your chrome to ch
 Note
 </p>
 <ul>
-<li>No packet loss support.</li>
+<li>No packet loss recover support.</li>
 <li>No bullets sync(bullets independently move on each node).</li>
 </ul>
 
